gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__skip_layer_partition_boundary.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             █████           █████                                              "
"           ╭─█N1██─╮       ╭─█N3██─╮                                            "
"     █████ │ █████ │ █████ │ █████ │ █████ █████                                "
"     █N0██─┤       ├─█N2██─┤       ├─█N5██─█N6██                                "
"     █████ ╰───────╯ █████ │ █████ │ █████ █████                                "
"                           ╰─█N4██─╯                                            "
"                             █████                                              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
